--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
-<html lang="br">
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Consumindo APIS do Spring Boot Suite</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <title>Consumindo APIS do Spring Boot Suite</title>
     </head>
     <body>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#"> SAÚDE </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudo">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div id="conteudo">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html"> Home </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="paciente.html"> Paciente </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="medico.html"> Médico </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="atendimento.html"> Atendimento </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sobre.html"> Sobre </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <h1> Faremos uma página para consumir as APIs do Spring Boot Suite </h1>
+        </main>
+        <footer>
+
+        </footer>
         
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
