--- a/frontend/paciente.html
+++ b/frontend/paciente.html
@@ -34,10 +34,30 @@
             </nav>
         </header>
         <main>
-            <div class="container">
-                <h2> Faremos uma página para consumir as APIs do Spring Boot Suite </h2>
-                <h3> e-Health </h3>
-            </div>
+           <div class="container">
+               <form>
+                   <div class="form-group"> 
+                        <label for="nome"> Nome </label>
+                        <input type="text" class="form-control" id="nome"/> 
+                   </div>
+                   <div class="form-group"> 
+                        <label for="cpf"> CPF </label>
+                        <input type="text" class="form-control" id="cpf"/> 
+                   </div>
+                   <div class="form-group"> 
+                        <label for="peso"> Peso </label>
+                        <input type="number" class="form-control" id="peso"/> 
+                    </div>
+                    <div class="form-group"> 
+                        <label for="altura"> Altura </label>
+                        <input type="number" class="form-control" id="altura"/> 
+                   </div>
+                   <div class="form-group"> 
+                        <label for="idade"> Idade </label>
+                        <input type="number" class="form-control" id="idade"/> 
+                    </div>
+               </form>
+           </div>
         </main>
         <footer>
 
