--- a/frontend/paciente.html
+++ b/frontend/paciente.html
@@ -56,6 +56,7 @@
                         <label for="idade"> Idade </label>
                         <input type="number" class="form-control" id="idade"/> 
                     </div>
+                    <button type="button" class="btn btn-primary">Enviar</button>
                </form>
            </div>
         </main>
