--- a/frontend/paciente.html
+++ b/frontend/paciente.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <title>Consumindo APIS do Spring Boot Suite</title>
+        <script src="funcoes.js"></script>
     </head>
     <body>
         <header>
@@ -56,7 +57,7 @@
                         <label for="idade"> Idade </label>
                         <input type="number" class="form-control" id="idade"/> 
                     </div>
-                    <button type="button" class="btn btn-primary">Enviar</button>
+                    <button onClick="insere()" type="button" class="btn btn-primary">Enviar</button>
                </form>
            </div>
         </main>
