--- a/frontend/paciente.html
+++ b/frontend/paciente.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
         <title>Consumindo APIS do Spring Boot Suite</title>
         <script src="funcoes.js"></script>
     </head>
-    <body>
+    <body onload="carregaTabela()">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#"> SAÚDE </a>
@@ -59,6 +60,23 @@
                     </div>
                     <button onClick="insere()" type="button" class="btn btn-primary">Enviar</button>
                </form>
+               <section>
+                   <h3> Lista de Pacientes </h3>
+                   <table class="table">
+                        <theader>
+                            <th> Código </th>
+                            <th> CPF </th>
+                            <th> Peso </th>
+                            <th> Altura </th>
+                            <th> Idade </th> 
+                            <th> Remover </th>
+                            <th> Editar </th>
+                        </theader>
+                        <tbody id="conteudoTabela">
+
+                        </tbody>
+                   </table>
+               </section>
            </div>
         </main>
         <footer>
