--- a/frontend/paciente.html
+++ b/frontend/paciente.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="styles.css">
         <title>Consumindo APIS do Spring Boot Suite</title>
         <script src="funcoes.js"></script>
     </head>
@@ -37,6 +38,7 @@
         </header>
         <main>
            <div class="container">
+                <h3> Cadastro de Pacientes </h3>
                <form>
                    <div class="form-group"> 
                         <label for="nome"> Nome </label>
@@ -55,13 +57,13 @@
                         <input type="number" class="form-control" id="altura"/> 
                    </div>
                    <div class="form-group"> 
-                        <label for="idade"> Idade </label>
+                     <label for="idade"> Idade </label>
                         <input type="number" class="form-control" id="idade"/> 
                     </div>
                     <button onClick="insere()" type="button" class="btn btn-primary">Enviar</button>
                </form>
                <section>
-                   <h3> Lista de Pacientes </h3>
+                   <h3 > Lista de Pacientes </h3>
                    <table class="table">
                         <theader>
                             <th> Código </th>
