--- a/frontend/medico.html
+++ b/frontend/medico.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <title>Consumindo APIS do Spring Boot Suite</title>
+        <script src="./funcoes.js"> </script>
     </head>
     <body>
         <header>
@@ -49,7 +50,7 @@
                         <label for="especialidade"> Especialidade </label>
                         <input class="form-control" type="text" id="especialidade" placeholder="Informe a especialidade"/>
                     </div>
-                    <button type="button" class="btn btn-primary" onClick="cadastraMedico()"> Enviar </button>
+                    <button type="button" class="btn btn-primary" onClick="cadastrarMedico()"> Enviar </button>
                </form> 
             </div>
         </main>
