--- a/frontend/medico.html
+++ b/frontend/medico.html
@@ -53,6 +53,23 @@
                     <button type="button" class="btn btn-primary" onClick="cadastrarMedico()"> Enviar </button>
                </form> 
             </div>
+            <section>
+                <h3> Lista de Médicos </h3>
+                <table>
+                    <thead>
+                        <tr> 
+                            <td> Nome </td> 
+                            <td> CRM </td> 
+                            <td> Especialidade </td> 
+                            <td> Remover </td>
+                            <td> Atualizar </td> 
+                        </tr>
+                    </thead>
+                    <tbody id="conteudoTabela">
+                        
+                    </tbody>
+                </table>
+            </section>
         </main>
         <footer>
 
