--- a/frontend/medico.html
+++ b/frontend/medico.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <title>Consumindo APIS do Spring Boot Suite</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
+          <title>Consumindo APIS do Spring Boot Suite</title>
         <script src="./funcoes.js"> </script>
     </head>
-    <body>
+    <body onload="consultaMedicos()">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#"> SAÚDE </a>
@@ -37,7 +38,8 @@
         <main>
             <div class="container">
                <h3> Cadastro de Médico </h3>
-               <form>
+               <form >
+                   <input hidden id="id"/>
                    <div class="form-group">
                         <label for="nome"> Nome </label>
                         <input class="form-control" type="text" id="nome" placeholder="Informe o nome"/>
@@ -52,24 +54,25 @@
                     </div>
                     <button type="button" class="btn btn-primary" onClick="cadastrarMedico()"> Enviar </button>
                </form> 
-            </div>
+            
             <section>
                 <h3> Lista de Médicos </h3>
                 <table>
                     <thead>
                         <tr> 
-                            <td> Nome </td> 
-                            <td> CRM </td> 
-                            <td> Especialidade </td> 
-                            <td> Remover </td>
-                            <td> Atualizar </td> 
+                            <th> Nome </th> 
+                            <th> CRM </th> 
+                            <th> Especialidade </th> 
+                            <th> Remover </th>
+                            <th> Atualizar </th> 
                         </tr>
                     </thead>
                     <tbody id="conteudoTabela">
-                        
+
                     </tbody>
                 </table>
             </section>
+        </div>
         </main>
         <footer>
 
